# Agentic-Email-Assistant

./: .gitignore  pyproject.toml
src/: LLM_as_judge.py
src/email_assistant/: agent_tools.py  agents.py  agents_HITL.py  main.py  prompts.py  schemas.py  utils.py
src/email_assistant/eval/: email_test_dataset.py
test/: test_email_assistant.py  test_langsmith_eval.py
